Deletes wrong version of the repair